--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,23 +1,16 @@
-# MySQL Database Configuration
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USER}
-spring.datasource.password=${DB_PASSWORD}
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# Database Configuration (using environment variables)
+spring.datasource.url=${DB_URL:jdbc:h2:mem:testdb}
+spring.datasource.username=${DB_USER:sa}
+spring.datasource.password=${DB_PASSWORD:password}
+spring.datasource.driver-class-name=${DB_DRIVER:org.h2.Driver}
 
-# JPA/Hibernate Configuration
+# JPA/Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=${DB_DIALECT:org.hibernate.dialect.H2Dialect}
 
 # Server Configuration
 server.port=${PORT:8080}
 
-# Application Settings
-auction.min.increment=50
-auction.quick.duration.hours=2
-auction.regular.duration.days=7
-
-# Optional: Better error messages during development
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-logging.level.org.hibernate.SQL=DEBUG
+# CORS Configuration (allow frontend to access backend)
+spring.web.cors.allowed-origins=${CORS_ORIGINS:http://localhost:3000,https://*.netlify.app}
