--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-# Database Configuration (using environment variables)
+# Database Configuration (using environment variables - SECURE)
 spring.datasource.url=${DB_URL:jdbc:h2:mem:testdb}
 spring.datasource.username=${DB_USER:sa}
 spring.datasource.password=${DB_PASSWORD:password}
@@ -6,11 +6,16 @@ spring.datasource.driver-class-name=${DB_DRIVER:org.h2.Driver}
 
 # JPA/Hibernate
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=${DB_DIALECT:org.hibernate.dialect.H2Dialect}
 
 # Server Configuration
 server.port=${PORT:8080}
 
-# CORS Configuration (allow frontend to access backend)
-spring.web.cors.allowed-origins=${CORS_ORIGINS:http://localhost:3000,https://*.netlify.app}
+# Email Configuration (using environment variables - SECURE)
+spring.mail.host=${MAIL_HOST:smtp.gmail.com}
+spring.mail.port=${MAIL_PORT:587}
+spring.mail.username=${MAIL_USERNAME:your-email@gmail.com}
+spring.mail.password=${MAIL_PASSWORD:your-app-password}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
