--- a/frontend/netlify.toml
+++ b/frontend/netlify.toml
@@ -1,7 +1,8 @@
+[build]
+  base = "frontend"
+  publish = "."
+
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
-
-[build]
-  publish = "frontend"
