Optimized SpringBoot settings & fixed registration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,8 @@ spring.mail.username=${MAIL_USERNAME:your-email@gmail.com}
 spring.mail.password=${MAIL_PASSWORD:your-app-password}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+# Memory optimization
+server.tomcat.threads.max=50
+server.tomcat.max-connections=500
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.open-in-view=false
