--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 # Database Configuration (using environment variables - SECURE)
-spring.datasource.url=${DB_URL:jdbc:h2:mem:testdb}
-spring.datasource.username=${DB_USER:sa}
-spring.datasource.password=${DB_PASSWORD:password}
-spring.datasource.driver-class-name=${DB_DRIVER:org.h2.Driver}
+spring.datasource.url=${DATABASE_URL}
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA/Hibernate
 spring.jpa.hibernate.ddl-auto=update
