--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=${DB_DIALECT:org.hibernate.dialect.H2Dialect}
 
 # Server Configuration
-server.port=${PORT:10000}
+server.port=10000
 
 # Email Configuration (using environment variables - SECURE)
 spring.mail.host=${MAIL_HOST:smtp.gmail.com}
